fixed title + text alignment pg 2, bolded title

--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@
         overflow: hidden;
         width: 100vw;
     }
+
+    .bolded {
+        font-weight: bold;
+    }
     
     .quote-container {
         float: left;
@@ -207,7 +211,7 @@
    
     #values-container {
         text-align: center;
-        margin-top: 5%;
+        margin-top: 6%;
         width: 21.5%;
         float: left;
     }
@@ -320,8 +324,12 @@
     
         .pg-title {
             font-size: 30px;
-            padding: 5% 0 0 4%;
+            padding: 5% 0 0 0;
             font-family: 'Lato', sans-serif;
+        }
+
+        .pg4-title {
+            margin-left: 4%;
         }
     
         .blue-underline {
@@ -535,6 +543,10 @@
         width: 100vw;
     }
 
+    .bolded {
+        font-weight: bold;
+    }
+
     .quote-container {
         float: left;
         font-size: 40px;
@@ -597,7 +609,7 @@
    
     #values-container {
         text-align: center;
-        margin-top: 5%;
+        margin-top: 6%;
         width: 21.5%;
         float: left;
     }
@@ -710,7 +722,7 @@
 
     .pg-title {
         font-size: 30px;
-        padding: 5% 0 0 4%;
+        padding: 5% 0 0 0;
         font-family: 'Lato', sans-serif;
     }
 
@@ -922,6 +934,10 @@
         margin: 8% 0 0 3%;
     }
 
+    .bolded {
+        font-weight: bold;
+    }
+
     .quote-underline {
         width: 100%;
     }
@@ -976,7 +992,7 @@
    
     #values-container {
         text-align: center;
-        margin-top: 5%;
+        margin-top: 6%;
         width: 21.5%;
         float: left;
     }
@@ -1089,7 +1105,7 @@
     
         .pg-title {
             font-size: 30px;
-            padding: 5% 0 0 4%;
+            padding: 5% 0 0 0;
             font-family: 'Lato', sans-serif;
         }
     
@@ -1343,6 +1359,10 @@
         margin: 8% 0 0 3%;
     }
 
+    .bolded {
+        font-weight: bold;
+    }
+
     .quote-underline {
         width: 100%;
     }
@@ -1397,7 +1417,7 @@
    
     #values-container {
         text-align: center;
-        margin-top: 5%;
+        margin-top: 6%;
         width: 21.5%;
         float: left;
     }
@@ -1497,7 +1517,7 @@
     
         .pg-title {
             font-size: 30px;
-            padding: 5% 0 0 4%;
+            padding: 5% 0 0 0;
             font-family: 'Lato', sans-serif;
         }
     
@@ -1743,6 +1763,10 @@
         margin: 8% 0 0 3%;
     }
 
+    .bolded {
+        font-weight: bold;
+    }
+
     .quote-underline {
         width: 100%;
     }
@@ -1797,7 +1821,7 @@
    
     #values-container {
         text-align: center;
-        margin-top: 5%;
+        margin-top: 6%;
         width: 21.5%;
         float: left;
     }
@@ -1889,7 +1913,7 @@
     
         .pg-title {
             font-size: 30px;
-            padding: 5% 0 0 4%;
+            padding: 5% 0 0 0;
             font-family: 'Lato', sans-serif;
         }
     
